; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/xen/pcifront/extr_pcifront.c_pcifront_backend_changed.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/xen/pcifront/extr_pcifront.c_pcifront_backend_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenbus_device = type { i32, %struct.pcifront_device* }
%struct.pcifront_device = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"backend closing (%s)\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"backend closed (%s)\0A\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"backend connected (%s)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xenbus_device*, i32)* @pcifront_backend_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcifront_backend_changed(%struct.xenbus_device* %0, i32 %1) #0 {
  %3 = alloca %struct.xenbus_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pcifront_device*, align 8
  store %struct.xenbus_device* %0, %struct.xenbus_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %7 = getelementptr inbounds %struct.xenbus_device, %struct.xenbus_device* %6, i32 0, i32 1
  %8 = load %struct.pcifront_device*, %struct.pcifront_device** %7, align 8
  store %struct.pcifront_device* %8, %struct.pcifront_device** %5, align 8
  %9 = load i32, i32* %4, align 4
  switch i32 %9, label %31 [
    i32 129, label %10
    i32 130, label %17
    i32 128, label %24
  ]

10:                                               ; preds = %2
  %11 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %12 = getelementptr inbounds %struct.xenbus_device, %struct.xenbus_device* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @DPRINTF(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load %struct.pcifront_device*, %struct.pcifront_device** %5, align 8
  %16 = call i32 @pcifront_disconnect(%struct.pcifront_device* %15)
  br label %32

17:                                               ; preds = %2
  %18 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %19 = getelementptr inbounds %struct.xenbus_device, %struct.xenbus_device* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @DPRINTF(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  %22 = load %struct.pcifront_device*, %struct.pcifront_device** %5, align 8
  %23 = call i32 @pcifront_disconnect(%struct.pcifront_device* %22)
  br label %32

24:                                               ; preds = %2
  %25 = load %struct.xenbus_device*, %struct.xenbus_device** %3, align 8
  %26 = getelementptr inbounds %struct.xenbus_device, %struct.xenbus_device* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @DPRINTF(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0), i32 %27)
  %29 = load %struct.pcifront_device*, %struct.pcifront_device** %5, align 8
  %30 = call i32 @pcifront_connect(%struct.pcifront_device* %29)
  br label %32

31:                                               ; preds = %2
  br label %32

32:                                               ; preds = %31, %24, %17, %10
  ret void
}

declare dso_local i32 @DPRINTF(i8*, i32) #1

declare dso_local i32 @pcifront_disconnect(%struct.pcifront_device*) #1

declare dso_local i32 @pcifront_connect(%struct.pcifront_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
